Updated colors and fonts

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -271,24 +271,32 @@
   left: 15px
 
 .sidebar-text-title
+  font-family: 'Open Sans'
+  font-weight: 400
   text-align: left
-  border-bottom: 1px solid #d4d7dc
+  margin-bottom: 5px !important
+  // border-bottom: 1px solid #d4d7dc
+  text-transform: uppercase
 
 .sidebar-text-left
+  font-size: 10px !important
   padding: 10px
   float: left
   cursor: pointer
+  text-transform: uppercase
 
 .sidebar-text-right
+  font-size: 10px !important
+  font-weight: 400
   padding: 10px
   float: right
   cursor: pointer
+  text-transform: uppercase
 
 .sidebar-selected
-  background-color: #ffd777
+  background-color: $blue
   border-radius: 6%
-  font-weight: bold
-  color: #424a5d
+  color: $white
 
 .sidebar-buttons-box
   height: 72px
