--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -5,3 +5,16 @@ $darkblue: #424a5d
 $lightblue: #6fa6cc
 $sidebar-width: 90px
 $sidebar-icon-size: 25px
+
+// Palette
+
+// .primary
+$black: #211915
+$aqua: #55cec5
+$blue: #399ed9
+$darkblue: #292e45
+$mediumblue: #4d5b6a
+$mediumgray: #cfdde3
+$lightgray: #ecf0f3
+
+// .secundary
