--- a/frontend/app/templates/components/projections-toolbar.hbs
+++ b/frontend/app/templates/components/projections-toolbar.hbs
@@ -2,7 +2,7 @@
 
 	<div class="map-breadcrumbs">
 	
-		<ul class="map-link">
+		<ul class="map-links">
 			<li class="map-link" {{action 'setCountry'}}>
 				México
 			</li>
