--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -3,11 +3,10 @@
   z-index: 100
   width: 225px
   height: 100%
-  background-color: #aeb2b4
   position: fixed
   // box-shadow: 0 2px 5px 0 rgba(0,0,0,.26)
-  border-right: 1px solid #d4d7dc
-  background-color: #fbfbfb
+  // border-right: 1px solid #d4d7dc
+  background-color: $white
 
 .projections-toolbar
   position: absolute
@@ -26,10 +25,14 @@
   height: 100%
   padding: 20px 20px 20px 0px
 
+.map-links
+  padding: 0
+
 .map-link
+  padding: 0 0 0 15px
   display: inline
   font-size: 18px
-  color: #8e8d8d
+  color: $darkblue
   cursor: pointer
 
 .searchbar
