--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -5,7 +5,7 @@
       <div class="fa fa-bars tooltips" {{action "toggleSidebar"}}></div>
     </div>
 
-    <a href="index.html" class="logo"><b>Irrational</b></a>
+    <a href="index.html" class="logo"><b>Asesor Político Inteligente</b></a>
     
     <div class="top-menu">
       {{!-- <ul class="nav pull-right top-menu">
