Updated design elements

--- a/frontend/app/styles/app/_parties-selection.sass
+++ b/frontend/app/styles/app/_parties-selection.sass
@@ -9,10 +9,10 @@
 		border-radius: 4px !important
 		cursor: pointer !important
 		margin: 0 3px 3px 0 !important
-		background: #74d0d6 !important
-		border: 1px solid #74d0d6 !important
+		background: $aqua !important
+		// border: 1px solid #74d0d6 !important
 		color: #ffffff !important
-		padding: 2px 5px !important
+		padding: 8px !important
 
 .selectize-control.multi .selectize-input
 	div
