--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -280,21 +280,20 @@
 
 .sidebar-text-left
   font-size: 10px !important
-  padding: 10px
+  padding: 8px
   float: left
   cursor: pointer
   text-transform: uppercase
 
 .sidebar-text-right
   font-size: 10px !important
-  font-weight: 400
-  padding: 10px
+  padding: 8px
   float: right
   cursor: pointer
   text-transform: uppercase
 
 .sidebar-selected
-  background-color: $blue
+  background-color: $aqua
   border-radius: 6%
   color: $white
 
