--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -3,8 +3,8 @@ $white: #fbfbfb
 $yellow: #ffd777
 $darkblue: #424a5d
 $lightblue: #6fa6cc
-$sidebar-width: 90px
-$sidebar-icon-size: 25px
+$sidebar-width: 60px
+$sidebar-icon-size: 18px
 
 // Palette
 
@@ -12,7 +12,8 @@ $sidebar-icon-size: 25px
 $black: #211915
 $aqua: #55cec5
 $blue: #399ed9
-$darkblue: #292e45
+$darkerblue: #192029
+$darkblue: #2f3e4e
 $mediumblue: #4d5b6a
 $mediumgray: #cfdde3
 $lightgray: #ecf0f3
