--- a/frontend/app/styles/layout/_sidebar.sass
+++ b/frontend/app/styles/layout/_sidebar.sass
@@ -4,7 +4,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,900)
 
 body
-  color: $mediumblue
+  color: #666
   background: $white
   font-family: 'Lato'
   font-weight: 300
@@ -125,7 +125,7 @@ ul.sidebar-menu
   li ul.sub
     margin: -2px 0 0
     padding: 0
-  margin-top: 75px
+  margin-top: 65px
 
 #sidebar > ul > li
   > ul.sub
@@ -194,7 +194,7 @@ ul.sidebar-menu li
   z-index: 1002
 
 .black-bg
-  background: $darkblue
+  background: $darkerblue
   
 
 .wrapper
