Updated dropdown inputs styles

--- a/frontend/app/styles/app/_parties-selection.sass
+++ b/frontend/app/styles/app/_parties-selection.sass
@@ -1,37 +1,51 @@
 .selectize-control .selectize-input
-	padding: 3px 4px 0px !important
+	padding: 0 !important
+
+.selectize-dropdown
+	text-transform: uppercase !important
+	border: 1px solid $aqua !important
 
 .selectize-input
-	border: 1px solid #d4d7dc
+	border: 0 !important
+	background: transparent !important
+	box-shadow: none !important
 
 .selectize-control .selectize-input
 	div
+		font-size: 10px !important
+		text-transform: uppercase !important
 		border-radius: 4px !important
 		cursor: pointer !important
-		margin: 0 3px 3px 0 !important
+		margin: 0 !important
 		background: $aqua !important
 		// border: 1px solid #74d0d6 !important
 		color: #ffffff !important
-		padding: 8px !important
+		padding: 6px 8px !important
 
 .selectize-control.multi .selectize-input
 	div
 		border-radius: 4px !important
 		cursor: pointer !important
-		margin: 0 3px 3px 0 !important
-		background: #ffd777 !important
+		margin: 0 6px 6px 0 !important
+		background: $aqua !important
 		border: 1px solid transparent !important
-		color: #424a5d !important
+		color: $white !important
 		padding-right: 16px !important
 		a
 			border-left: none !important
 		a:hover
-			background-color: #fbe3ab !important
+			background-color: transparent !important
 
 .selectize-input
 	input
-		margin-bottom: 3px !important
+		//display: none !important
+		margin: 0 !important
+		padding: 0px !important
+		width: 100% !important
+
+.option
+	font-size: 10px !important
 
 .active
-	background-color: #6fa6cc !important
-	color: #ffffff !important
+	background-color: $mediumgray !important
+	color: $darkblue !important
