--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -6,7 +6,7 @@
   position: fixed
   // box-shadow: 0 2px 5px 0 rgba(0,0,0,.26)
   border-right: 1px solid #d4d7dc
-  background-color: $white
+  background-color: $lightgray
 
 .projections-toolbar
   position: absolute
@@ -45,7 +45,7 @@
     border: none !important
     -webkit-box-shadow: none !important
     box-shadow: none !important
-    background: transparent !important
+    background: $aqua !important
 
 .searchbar-container
   height: 100%
