--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -271,8 +271,9 @@
   left: 15px
 
 .sidebar-text-title
+  color: $darkblue
   font-family: 'Open Sans'
-  font-weight: 400
+  font-weight: 600
   text-align: left
   margin-bottom: 5px !important
   // border-bottom: 1px solid #d4d7dc
@@ -294,7 +295,7 @@
 
 .sidebar-selected
   background-color: $aqua
-  border-radius: 6%
+  border-radius: 4px
   color: $white
 
 .sidebar-buttons-box
