--- a/frontend/app/templates/components/parties-selection.hbs
+++ b/frontend/app/templates/components/parties-selection.hbs
@@ -1,5 +1,5 @@
 <div>
-	<p class="sidebar-text-title no-margin no-border">Partidos:</p>
+	<p class="sidebar-text-title no-margin no-border">Partidos</p>
 	<div class="ticket-textfield-container">
 		{{ember-selectize
 		open=true
