Created css id for party selection/tags in parties-selection.hbs

--- a/frontend/app/styles/app/_parties-selection.sass
+++ b/frontend/app/styles/app/_parties-selection.sass
@@ -30,7 +30,7 @@
 		background: $aqua !important
 		border: 1px solid transparent !important
 		color: $white !important
-		padding-right: 16px !important
+		padding: 4px 16px 4px 4px !important
 		a
 			border-left: none !important
 		a:hover
@@ -38,10 +38,22 @@
 
 .selectize-input
 	input
-		//display: none !important
+		display: none !important
 		margin: 0 !important
 		padding: 0px !important
 		width: 100% !important
+
+#select-party
+	input
+		display: initial !important
+		font-size: 10px !important
+		text-transform: uppercase !important
+		border-radius: 4px !important
+		cursor: pointer !important
+		margin: 0 !important
+		background: $white !important
+		// border: 1px solid #74d0d6 !important
+		padding: 6px 8px !important
 
 .option
 	font-size: 10px !important
