--- a/frontend/app/templates/components/parties-selection.hbs
+++ b/frontend/app/templates/components/parties-selection.hbs
@@ -1,6 +1,6 @@
 <div>
 	<p class="sidebar-text-title no-margin no-border">Partidos</p>
-	<div class="ticket-textfield-container">
+	<div class="ticket-textfield-container" id="select-party">
 		{{ember-selectize
 		open=true
 		content=parties
