Pointer cursor for sidebar election dropdown when active

--- a/frontend/app/styles/app/_parties-selection.sass
+++ b/frontend/app/styles/app/_parties-selection.sass
@@ -46,13 +46,6 @@
 #select-party
 	input
 		display: initial !important
-		font-size: 10px !important
-		text-transform: uppercase !important
-		border-radius: 4px !important
-		cursor: pointer !important
-		margin: 0 !important
-		background: $white !important
-		// border: 1px solid #74d0d6 !important
 		padding: 6px 8px !important
 
 .option
@@ -61,3 +54,6 @@
 .active
 	background-color: $mediumgray !important
 	color: $darkblue !important
+
+.input-active
+	cursor: pointer !important
