--- a/frontend/app/styles/layout/_sidebar.sass
+++ b/frontend/app/styles/layout/_sidebar.sass
@@ -166,7 +166,7 @@ ul.sidebar-menu li
       transition: all 0.3s ease
     i
       font-size: $sidebar-icon-size
-      padding-right: 6px
+      padding: 0
     &:hover i, &:focus i, &.active i
       color: #fff
 
