--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -273,11 +273,12 @@
 .sidebar-text-title
   color: $darkblue
   font-family: 'Open Sans'
+  font-size: 14px
   font-weight: 600
   text-align: left
   margin-bottom: 5px !important
   // border-bottom: 1px solid #d4d7dc
-  text-transform: uppercase
+  text-transform: none
 
 .sidebar-text-left
   font-size: 10px !important
