--- a/frontend/app/styles/layout/_sidebar.sass
+++ b/frontend/app/styles/layout/_sidebar.sass
@@ -4,7 +4,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,900)
 
 body
-  color: #666
+  color: $darkblue
   background: $white
   font-family: 'Lato'
   font-weight: 400
