Party selection/tags cursor

--- a/frontend/app/styles/app/_parties-selection.sass
+++ b/frontend/app/styles/app/_parties-selection.sass
@@ -75,7 +75,7 @@
 		padding: 6px 8px !important
 
 #select-party .input-active
-	cursor: initial !important
+	cursor: pointer !important
 
 #select-party .selectize-input
 	input
