--- a/frontend/app/templates/maps/projections.hbs
+++ b/frontend/app/templates/maps/projections.hbs
@@ -1,4 +1,4 @@
-{{projections-toolbar mapDivision=mapDivision level=level state=state municipality=municipality federalDistrict=federalDistrict section=section setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
+{{projections-toolbar mapDivision=mapDivision level=level state=state municipality=municipality federalDistrict=federalDistrict section=section year=year election=election setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
 
 {{projections-sidebar sectionData=model mapDivision=mapDivision dataType=dataType setMapDivision='setMapDivision' isVotes=isVotes isPopulation=isPopulation isFederal=isFederal isMunicipal=isMunicipal setDataType='setDataType' setElection='setElection'}}
 
