Disable authentication setup in favor of faking it for a bit & creating a helper to get htmlsafe background colors

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -5,6 +5,7 @@
 @import 'app/projections';
 @import 'app/parties-selection';
 @import 'general/polls';
+@import 'general/login';
 
 @import "ember-power-select";
 @import 'general/searchbar';
