--- a/frontend/app/styles/general/_login.sass
+++ b/frontend/app/styles/general/_login.sass
@@ -1,6 +1,6 @@
-body
-  background-color: #444
-  background: url(http://s18.postimg.org/l7yq0ir3t/pick8_1.jpg)
+// body
+//   background-color: #444
+//   background: url(http://s18.postimg.org/l7yq0ir3t/pick8_1.jpg)
 
 .form-signin
   input
