--- a/frontend/app/templates/authenticated.hbs
+++ b/frontend/app/templates/authenticated.hbs
@@ -1,4 +1,4 @@
-{{#if auth.isAuthenticated }}
+
   <div id="container" class="{{unless sidebarOpen "sidebar-closed"}}">
   {{!-- Header --}}
   <header class="header black-bg">
@@ -22,7 +22,6 @@
   {{#if sidebarOpen}}
     <div id="sidebar" class="sidebar-box nav-collapse">
       <ul class="sidebar-menu" id="nav-accordion">
-
         {{!-- Maps --}}
         <li class="sub-menu mt">
 
@@ -54,6 +53,23 @@
       {{outlet}}
   </section>
 </div>
-{{else}}
-<h1>Login</h1>
-{{/if}}
+{{!-- <div class="container">
+    <div class="row vertical-offset-100">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <form accept-charset="UTF-8" role="form" class="form-signin">
+                        <fieldset>
+                            <label class="panel-login">
+                                <div class="login_result"></div>
+                            </label>
+                            <input class="form-control" placeholder="Username" id="username" type="text">
+                            <input class="form-control" placeholder="Password" id="password" type="password">
+                            <input class="btn btn-lg btn-success btn-block" type="submit" id="login" value="Login »">
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> --}}
