--- a/frontend/app/templates/components/tooltip-comparison.hbs
+++ b/frontend/app/templates/components/tooltip-comparison.hbs
@@ -24,7 +24,7 @@
 		<tbody class="votes-table-content">
 			<tr>
 				<td>
-					<span class="tooltip-color-box" style="{{firstPartyColor}}"></span>
+					<span class="tooltip-color-box" style="{{background-color firstParty.color}}"></span>
 					<span class="tooltip-party">{{firstParty.name}}</span>
 				</td>
 				<td>{{firstParty.votes}}</td>
@@ -33,7 +33,7 @@
 
 			<tr>
 				<td>
-					<span class="tooltip-color-box" style="{{secondPartyColor}}"></span>
+					<span class="tooltip-color-box" style="{{background-color secondParty.color}}"></span>
 					<span class="tooltip-party">{{secondParty.name}}</span>
 				</td>
 				<td>{{secondParty.votes}}</td>
