Display party colors on the tooltip

--- a/frontend/app/templates/components/tooltip-single.hbs
+++ b/frontend/app/templates/components/tooltip-single.hbs
@@ -28,7 +28,7 @@
 		<tbody class="votes-table-content">
 			<tr>
 				<td>
-					<span class="tooltip-color-box" style="background-color: #179ee0;"></span>
+					<span class="tooltip-color-box" style="{{background-color party.color}}"></span>
 					<span class="tooltip-party">{{party.name}}</span>
 				</td>
 				<td> {{party.votes}} </td>
