--- a/frontend/app/templates/authenticated.hbs
+++ b/frontend/app/templates/authenticated.hbs
@@ -25,25 +25,10 @@
         {{!-- Maps --}}
         <li class="sub-menu mt">
 
-          {{#link-to "maps.projections"}}
+          {{#link-to "authenticated.maps.projections"}}
             <i class="fa fa-map-o"></i>
           {{/link-to}}
         </li>
-
-        {{!-- Polls --}}
-        <li class="sub-menu">
-          {{#link-to "polls" 1}}
-            <i class="fa fa-bar-chart-o"></i>
-          {{/link-to}}
-        </li>
-
-        {{!-- Another section --}}
-        <li class="sub-menu">
-          <a>
-            <i class="fa fa-file-o"></i>
-          </a>
-        </li>
-        
       </ul>
     </div>
   {{/if}}
