--- a/frontend/app/templates/login.hbs
+++ b/frontend/app/templates/login.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+{{!-- <div class="container">
     <div class="row vertical-offset-100">
         <div class="col-md-4 col-md-offset-4">
             <div class="panel panel-default">
@@ -22,4 +22,5 @@
             </div>
         </div>
     </div>
-</div>
+</div> --}}
+{{login-form}}
