--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,1 +1,79 @@
-{{outlet}}
+{{#if session.isAuthenticated}}
+    <h1>is authenticated</h1>
+  {{else}}
+    <h1>not authenticated</h1>
+  {{/if}}
+
+
+  <div id="container" class="{{unless sidebarOpen "sidebar-closed"}}">
+  {{!-- Header --}}
+  <header class="header black-bg">
+    <div class="sidebar-toggle-box">
+      <div class="fa fa-bars tooltips" {{action "toggleSidebar"}}></div>
+    </div>
+
+    <a href="index.html" class="logo"><b>Asesor Político Inteligente</b></a>
+    
+    <div class="top-menu">
+      {{!-- <ul class="nav pull-right top-menu">
+        <li></li>
+      </ul> --}}
+      <div class="pull-right profile-circle">
+        HF
+      </div>
+    </div>
+  </header>
+
+  {{!-- Sidebar --}}
+  {{#if sidebarOpen}}
+    <div id="sidebar" class="sidebar-box nav-collapse">
+      <ul class="sidebar-menu" id="nav-accordion">
+        {{!-- Maps --}}
+        <li class="sub-menu mt">
+          {{#link-to "maps.projections"}}
+            <i class="fa fa-map-o"></i>
+          {{/link-to}}
+        </li>
+
+        {{!-- Polls --}}
+        <li class="sub-menu">
+          {{#link-to "polls" 1}}
+            <i class="fa fa-bar-chart-o"></i>
+          {{/link-to}}
+        </li>
+
+        {{!-- Another section --}}
+        <li class="sub-menu">
+          <a>
+            <i class="fa fa-file-o"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  {{/if}}
+
+  {{!-- Content --}}
+  <section id="main-content">
+      {{outlet}}
+  </section>
+</div>
+{{!-- <div class="container">
+    <div class="row vertical-offset-100">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <form accept-charset="UTF-8" role="form" class="form-signin">
+                        <fieldset>
+                            <label class="panel-login">
+                                <div class="login_result"></div>
+                            </label>
+                            <input class="form-control" placeholder="Username" id="username" type="text">
+                            <input class="form-control" placeholder="Password" id="password" type="password">
+                            <input class="btn btn-lg btn-success btn-block" type="submit" id="login" value="Login »">
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> --}}
