Styling login form

--- a/frontend/app/styles/general/_login.sass
+++ b/frontend/app/styles/general/_login.sass
@@ -1,6 +1,21 @@
 // body
 //   background-color: #444
-//   background: url(http://s18.postimg.org/l7yq0ir3t/pick8_1.jpg)
+//   background: url(http://s18.postimg.org/l7yq0ir3t/pick8_1.jpg)''
+#login-logo
+  content: url('/assets/apilogo.png')
+  max-width: 70% !important
+
+.login-btn
+  background-color: $lightblue
+  border-color: $lightblue
+  &:hover
+    background-color: $lightblue
+    border-color: $lightblue
+
+.panel-login
+  background-color: transparent !important
+  box-shadow: none !important
+  -webkit-box-shadow: none !important
 
 .form-signin
   input
