--- a/frontend/app/templates/components/login-form.hbs
+++ b/frontend/app/templates/components/login-form.hbs
@@ -1,10 +1,26 @@
-<form {{action "authenticate" on="submit"}}>
- <label for="identification">Email< /label>
-  {{input value=identification placeholder="Enter Login" class="form-control"}}
-  <label for="password">Password< /label>
-  {{input value=password type="password" placeholder="Enter Password"}}
-  <button type="submit">Login< /button>
-</form>
+<div class="container">
+    <div class="row vertical-offset-100">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="panel panel-default panel-login">
+                <div>                                
+                    <div class="row-fluid user-row">
+                        <img id="login-logo" class="img-responsive"/>
+                    </div>
+                </div>
+                <div class="panel-body">
+                    <form {{action "authenticate" on="submit"}} accept-charset="UTF-8" role="form" class="form-signin">
+                        <fieldset>
+                            {{input value=identification placeholder="Usuario" class="form-control"}}
+                            {{input value=password type="password" placeholder="Contraseña" class="form-control"}}
+                            {{input type="submit" value="Login" class="btn btn-lg btn-success btn-block login-btn"}}
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {{#if errorMessage}}
   {{errorMessage}}
 {{/if}}
