Repaired ember build

--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -28,6 +28,9 @@
   .toggle-button
     font-size: 20px
     cursor: pointer
+    display: inline-block
+  .settings-button
+    @extend .toggle-button
   .chart-title
     text-align: center
     font-weight: 600
