Changing the value on the slider now recalculates all charts

--- a/frontend/app/templates/components/projections-charts.hbs
+++ b/frontend/app/templates/components/projections-charts.hbs
@@ -5,7 +5,7 @@
   </div>
   <div id="settings-panel" class="hide">
     <p>Porcentage mínimo</p>
-    {{ui-slider value=minimumPercentage min=0 max=20 ticks='0,20'}}
+    {{ui-slider value=minimumPercentage min=0 max=20 ticks='0,20' changed='minPercentageChanged'}}
     <div class="min-max">
       <p class="min">0%</p>
       <p class="max">20%</p>
