Fixes little visual quirk with the slide animation on #settings-panel

--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -46,8 +46,8 @@
     .min
       margin-left: -5px
     .max
-      position: absolute
-      right: 9px
+      float: right;
+      margin-right: -12px;
   .chart-title
     text-align: center
     font-weight: 600
