--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -50,6 +50,7 @@
       {{outlet}}
   </section>
 </div>
+{{ember-notify}}
 {{!-- <div class="container">
     <div class="row vertical-offset-100">
         <div class="col-md-4 col-md-offset-4">
