--- a/frontend/app/templates/admin/users.hbs
+++ b/frontend/app/templates/admin/users.hbs
@@ -1,1 +1,32 @@
-<h1>Users</h1>
+<div class="container">
+	<div class="row vertical-offset-100">
+		<div class="col-md-8 col-md-offset-2">
+			<h3 class="admin-table-title"> Admin de usuarios</h3>
+			<table class="table votes-table">
+				<thead class="votes-table-header">
+					<tr>
+						<th>Nombre</th>
+						<th>Email</th>
+						<th></th>
+						<th></th>
+					</tr>
+				</thead>
+
+				<tbody class="votes-table-content admin-table-body">
+				{{#each model as |user|}}
+					<tr>
+						<td>Mario Diaz</td>
+						<td>{{user.email}}</td>
+						<td>
+							<button class="btn btn-info">Actualizar</button>
+						</td>
+						<td>
+							<button class="btn btn-danger">Eliminar</button>
+						</td>
+					</tr>
+				{{/each}}
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
