Add functionality to remove users

--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -6,7 +6,14 @@ $lightblue: #6fa6cc
 $sidebar-width: 60px
 $sidebar-icon-size: 18px
 
-// Palette
+
+// Alerts
+$alertlightgreen: #43AC6A
+$alertdarkgreen: #3a945b
+$alertlightblue: #a0d3e8
+$alertdarkblue: #74bfdd
+$alertdarkred: #de2d0f
+$alertlightred: #f04124
 
 // .primary
 $black: #211915
