--- a/frontend/app/templates/admin/users.hbs
+++ b/frontend/app/templates/admin/users.hbs
@@ -21,7 +21,7 @@
 							<button class="btn btn-info">Actualizar</button>
 						</td>
 						<td>
-							<button class="btn btn-danger">Eliminar</button>
+							<button {{action 'deleteUser' user.id}} class="btn btn-danger">Eliminar</button>
 						</td>
 					</tr>
 				{{/each}}
