Refactor user admin dashboard to use one form for edit and create

--- a/frontend/app/styles/general/_login.sass
+++ b/frontend/app/styles/general/_login.sass
@@ -6,11 +6,14 @@
   max-width: 70% !important
 
 .login-btn
+  outline: none
   background-color: $lightblue
   border-color: $lightblue
   &:hover
     background-color: $lightblue
     border-color: $lightblue
+  &:focus
+    outline: none
 
 .panel-login
   background-color: transparent !important
