--- a/frontend/app/templates/admin/users.hbs
+++ b/frontend/app/templates/admin/users.hbs
@@ -18,7 +18,7 @@
 						<td>{{user.firstName}} {{user.lastName}}</td>
 						<td>{{user.email}}</td>
 						<td>
-							<button {{action 'testNotify'}} class="btn btn-info">Actualizar</button>
+							{{link-to "Editar" "admin.user-edit" user class="btn btn-info"}}
 						</td>
 						<td>
 							<button {{action 'deleteUser' user.id}} class="btn btn-danger">Eliminar</button>
