--- a/frontend/app/styles/layout/_sidebar.sass
+++ b/frontend/app/styles/layout/_sidebar.sass
@@ -30,7 +30,7 @@ a
   width: 100%
   height: 100%
 
-// Cards 
+// Cards
 
 .card
   background-color: #f9f8f8
@@ -141,6 +141,10 @@ ul.sidebar-menu li
   &.sub-menu
     line-height: 15px
     text-align: center
+    @media(max-width: 768px)
+      display: inline-block
+
+
   a
     span
       display: inline-block
@@ -195,7 +199,7 @@ ul.sidebar-menu li
 
 .black-bg
   background: $darkerblue
-  
+
 
 .wrapper
   display: inline-block
@@ -489,13 +493,14 @@ a.logo
   #sidebar
     height: auto
     overflow: hidden
-    position: absolute
+    position: relative
     width: 100%
     z-index: 1001
   // body container
   #main-content
     margin: 0px !important
     position: none !important
+    padding-top: 0
   #sidebar
     > ul > li
       > a
@@ -547,13 +552,13 @@ a.logo
         border-bottom: 15px solid #282e36
         border-left: 15px solid transparent
         border-right: 15px solid transparent
-  
+
   // sidebar collabler
   .modal-footer .btn
     margin-bottom: 0px !important
   .btn
     margin-bottom: 5px
-  
+
   // menu icon plus minus
   .dcjq-icon
     top: 10px
