Add errors to login form and style logout dropdown

--- a/frontend/app/styles/layout/_sidebar.sass
+++ b/frontend/app/styles/layout/_sidebar.sass
@@ -115,6 +115,7 @@ ul.top-menu > li > .logout
   font-size: 16px
   text-align: center
   line-height: 41px
+  outline: none
 
 .nav-collapse.collapse
   display: inline
