--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -16,8 +16,8 @@
           HF
         {{/dropdown.trigger}}
 
-        {{#dropdown.content}}
-          <h4 {{action "logout"}}>Aloito!</h4>
+        {{#dropdown.content class="dropdown-content"}}
+          <p {{action "logout"}} style="text-align: center;"> Cerrar Sesión</p>
         {{/dropdown.content}}
       {{/basic-dropdown}}
     </div>
