Improving style of login-btn

--- a/frontend/app/templates/components/login-form.hbs
+++ b/frontend/app/templates/components/login-form.hbs
@@ -12,7 +12,7 @@
                         <fieldset>
                             {{input value=identification placeholder="Usuario" class="form-control"}}
                             {{input value=password type="password" placeholder="Contraseña" class="form-control"}}
-                            {{input type="submit" value="Login" class="btn btn-lg btn-success btn-block login-btn"}}
+                            {{input type="submit" value="Login" class="btn btn-lg btn-block login-btn"}}
                         </fieldset>
                     </form>
                 </div>
