--- a/frontend/app/styles/general/_login.sass
+++ b/frontend/app/styles/general/_login.sass
@@ -9,11 +9,14 @@
   outline: none
   background-color: $lightblue
   border-color: $lightblue
+  color: white
   &:hover
     background-color: $lightblue
     border-color: $lightblue
+    color: white
   &:focus
     outline: none
+    color: white
 
 .panel-login
   background-color: transparent !important
