--- a/frontend/app/styles/general/_login.sass
+++ b/frontend/app/styles/general/_login.sass
@@ -59,3 +59,7 @@
   border-radius: 4px
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05)
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05)
+
+.horizontal-padding
+  padding-left: 15px
+  padding-right: 15px
