Add admin icon to sidebar only when current user is an admin

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -41,12 +41,14 @@
           {{/link-to}}
         </li>
 
-        {{!-- Another section --}}
+        {{!-- User admin --}}
+        {{#if session.currentUser.superadmin}}
         <li class="sub-menu">
-          <a>
-            <i class="fa fa-file-o"></i>
-          </a>
+          {{#link-to "admin.users"}}
+            <i class="fa fa-address-book-o"></i>
+          {{/link-to}}
         </li>
+        {{/if}}
       </ul>
     </div>
   {{/if}}
