Sending token when updating and creating users

--- a/frontend/app/styles/general/_admin.sass
+++ b/frontend/app/styles/general/_admin.sass
@@ -1,11 +1,17 @@
 .admin-table-body tr td
 	vertical-align: baseline !important
 	padding: 6px !important
-	button
+	.btn
 		padding: 4px 6px
+	.btn-success, .btn-info
+		padding: 4px 11px
 
 .admin-table-title
 	margin-top: 0px
 	margin-bottom: 40px
 	text-align: center
 	font-size: 35px
+
+.new-user-link
+	font-size: 15px
+	text-align: right
