--- a/frontend/app/templates/admin/users.hbs
+++ b/frontend/app/templates/admin/users.hbs
@@ -13,6 +13,12 @@
 				</thead>
 
 				<tbody class="votes-table-content admin-table-body">
+				<tr>
+				<td>XXXXX</td>
+				<td>XXXXX</td>
+				<td></td>
+				<td>{{link-to "Nuevo" "admin.new-user" class="btn btn-success"}}</td>
+				</tr>
 				{{#each model as |user|}}
 					<tr>
 						<td>{{user.firstName}} {{user.lastName}}</td>
