--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -49,7 +49,7 @@
         </li>
 
         <li class="sub-menu">
-          {{#link-to "polls" 1}}
+          {{#link-to "ine.voters"}}
             <i class="fa fa-id-card-o"></i>
           {{/link-to}}
         </li>
