Better typings for some imputs and fixes spelling errors

--- a/frontend/app/templates/components/projections-charts.hbs
+++ b/frontend/app/templates/components/projections-charts.hbs
@@ -4,7 +4,7 @@
     <div class="settings-button fa fa-cog" {{action "settings"}}/>
   </div>
   <div id="settings-panel" style="display: none;">
-    <p>Porcentage mínimo</p>
+    <p>Porcentaje mínimo</p>
     {{ui-slider value=minimumPercentage min=0 max=20 ticks='0,20' changed='minPercentageChanged'}}
     <div class="min-max">
       <p class="min">0%</p>
