--- a/frontend/app/styles/general/_login.sass
+++ b/frontend/app/styles/general/_login.sass
@@ -33,6 +33,8 @@
       margin-bottom: 10px
       border-top-left-radius: 0
       border-top-right-radius: 0
+    &[type="checkbox"]
+      box-shadow: none
   .form-control
     position: relative
     font-size: 16px
