--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -16,8 +16,8 @@
                                 class="form-control"}}
                             </div>
                             <div class="col-sm-6">
-                                <label>Fecha de Nacimiento:</label> {{input value=voter.date_of_birth placeholder="Fecha
-                                de Nacimiento" class="form-control"}}
+                                <label>Fecha de Nacimiento:</label> {{bootstrap-datepicker value=voter.date_of_birth
+                                placeholder="Fecha de Nacimiento" class="form-control" format="dd/mm/yyyy" language="es"}}
                             </div>
                         </div>
                         <div class="form-group row">
