Improves visibility on mall (ipad-mini like) devices

--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -1,5 +1,5 @@
 <div class="row vertical-offset-50">
-    <div class="col-sm-8 col-sm-offset-2">
+    <div class="col-md-8 col-md-offset-2">
         <div class="panel panel-default panel-login">
             <div>
                 <div class="row-fluid user-row">
